--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
           >:<span id="msec">00</span>
         </p>
         <div id="btn">
-          <button id="start">Start</button>
-          <button id="stop">Stop</button>
+          <button id="start">Start / Resume</button>
+          <button id="stop">Stop / Pause</button>
           <button id="reset">Reset</button>
         </div>
+        <!-- <h3>Kharthie R</h3> -->
       </div>
       <img src="bg.png" alt="" />
     </div>
